[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version =  "0.8.4", features =["json","tokio" , "tracing"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.140"