[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
base64 = "0.21"
bs58 = "0.5"
ed25519-dalek = "1.0"
rand = "0.9"